--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Ignacio Alejandro Torres Franceschi">
 	<meta name="description" content="Social Proof Section mockup">
+	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/main.css">
 	<link rel="icon" href="./images/favicon-32x32.png">
 	<title>Social Proof Section</title>
 </head>
