--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Social Proof Section mockup">
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/main-desktop.css">
 	<link rel="icon" href="./images/favicon-32x32.png">
 	<title>Social Proof Section</title>
 </head>
